# Yojaka

./: .env.example  .gitignore  Dockerfile  FEATURES.md  README.md  Yojaka_Build_Spec.md  dev.py  render.yaml  vercel.json
backend/: .env.example  README.md  alembic.ini  config.py  main.py  pyproject.toml
backend/agents/: __init__.py  base.py  council_assistant.py  cross_examiner.py  debate_trainer.py  evidence_researcher.py  judge.py  judge_assistant.py  lead_advocate.py  practice_debater.py  rebuttal_critic.py
backend/alembic/: env.py
backend/analytics/: __init__.py  argument_graph.py  bayesian.py  delphi.py  engine.py  game_theory.py  metrics.py  moe.py
backend/app/: __init__.py  config.py  database.py  debate.py  main.py  runtime_diary.py
backend/budget/: accountant.py  cost_rates.py  session_budget.py  tokenizer.py
backend/core/: intent_router.py  orchestrator.py  phase_scheduler.py  practice_controller.py  safety_guard.py  schemas.py  session_manager.py
backend/events/: __init__.py  bus.py  stream_manager.py
backend/memory/: __init__.py  context_window.py  experience.py  manager.py  semantic.py  user_profile.py
backend/observability/: __init__.py  metrics.py  runtime_diary.py
backend/providers/: __init__.py  anthropic.py  base.py  google.py  groq.py  health_cache.py  mock.py  moonshot.py  openai.py  openrouter.py  router.py  utility_tier.py
backend/repositories/: agent_experience_repo.py  cost_rates_repo.py  debates_repo.py  intelligence_repo.py  messages_repo.py  runtime_diary_repo.py  sessions_repo.py  token_events_repo.py  (+1 more)
(+79 files in other folders)
